test/fail/MultipleDefinitions.curry
module MultipleDefinitions where

data Rec0 = Rec

data Rec  = Rec { int  :: Int }
data Rec2 = R2 { int2 :: Int }
